# syncro_git

./: .gitignore  README.md  pyproject.toml
syncro_git/: cli.py
tests/: test_cli.py
tests/unit/: test_cli.py
